--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,9 +1,15 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
-#    parameter_name: value
+    google-apikey: PutYourGoogleAPIKeyHere
 
 services:
+    geocoder:
+        class: GoogleAPIs\Geocoder
+        arguments: ["%google-apikey%"]
+    place-searcher:
+        class: GoogleAPIs\PlaceSearcher
+        arguments: ["%google-apikey%"]
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
